# cartoonize

./: CMakeLists.txt  CartoonizerBilateral.cpp  CartoonizerBilateral.h  CartoonizerDT.cpp  CartoonizerDT.h  README.md  main.cpp
